--- a/Grippe Data.ipynb
+++ b/Grippe Data.ipynb
@@ -726,7 +726,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 51,
+   "id": "e3e2ad59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('App/flu_vaccination.csv', encoding='utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "299e83b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.read_csv('App/flu_vaccination.csv', sep=',')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "331ed11b",
    "metadata": {},
    "outputs": [
@@ -747,7 +768,7 @@
        "Name: region, Length: 2463, dtype: object"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,21 +779,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "e3e2ad59",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.to_csv('App/flu_vaccination.csv', encoding='utf-8')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "fb32b1bc",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "region\n",
+       " Auvergne-Rhône-Alpes          299\n",
+       " Bourgogne-Franche-Comté       163\n",
+       " Bretagne                      137\n",
+       " Centre-Val de Loire            96\n",
+       " Corse                          24\n",
+       " Grand Est                     177\n",
+       " Guadeloupe                      9\n",
+       " Guyane                          2\n",
+       " Hauts-de-France               230\n",
+       " La Réunion                     18\n",
+       " Martinique                      2\n",
+       " Mayotte                         1\n",
+       " Normandie                     119\n",
+       " Nouvelle-Aquitaine            252\n",
+       " Occitanie                     204\n",
+       " Pays de la Loire              151\n",
+       " Provence-Alpes-Côte d'Azur    224\n",
+       " Île-de-France                 355\n",
+       "Name: index, dtype: int64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby(['region']).count()['index']"
+   ]
   },
   {
    "cell_type": "code",
